<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <ToggleButton
        android:id="@+id/single_trigger_btn"
        android:textOn="@string/singleTrigger"
        android:textOff="@string/singleTrigger"
        android:tag="Single"
        android:textSize="@dimen/view_text_size"
        android:background="@drawable/select_main_menu_item_btn_bg"
        android:textColor="@color/select_setting_textcolor"
        android:layout_marginBottom="2dp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/normal_item_height"/>
    <ToggleButton
        android:id="@+id/video_mode_btn"
        android:textOn="@string/videoMode"
        android:textOff="@string/videoMode"
        android:tag="Video"
        android:textSize="@dimen/view_text_size"
        android:background="@drawable/select_main_menu_item_btn_bg"
        android:textColor="@color/select_setting_textcolor"
        android:layout_marginBottom="2dp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/normal_item_height"/>
    <ToggleButton
        android:id="@+id/plan_photo_btn"
        android:textOn="@string/planPhoto"
        android:textOff="@string/planPhoto"
        android:tag="Sequence"
        android:textSize="@dimen/view_text_size"
        android:visibility="invisible"
        android:background="@drawable/select_main_menu_item_btn_bg"
        android:textColor="@color/select_setting_textcolor"
        android:layout_marginBottom="2dp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/normal_item_height"/>
    <ToggleButton
        android:id="@+id/real_time_stack_btn"
        android:textOn="@string/realTimeStack"
        android:textOff="@string/realTimeStack"
        android:textSize="@dimen/view_text_size"
        android:visibility="invisible"
        android:background="@drawable/select_main_menu_item_btn_bg"
        android:textColor="@color/select_setting_textcolor"
        android:layout_marginBottom="2dp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/normal_item_height"/>
    <ToggleButton
        android:id="@+id/auto_focuse_btn"
        android:textOn="@string/autoFocuse"
        android:textOff="@string/autoFocuse"
        android:textSize="@dimen/view_text_size"
        android:visibility="invisible"
        android:background="@drawable/select_main_menu_item_btn_bg"
        android:textColor="@color/select_setting_textcolor"
        android:layout_width="match_parent"
        android:layout_height="@dimen/normal_item_height"/>

</LinearLayout>