<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="550dp"
        android:layout_height="wrap_content"
        android:background="@drawable/delete_dialog_bg"
        >
        <TextView
            android:id="@+id/msg_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:textColor="@color/red"
            android:text="@string/check_disconnect_title"
            android:textSize="@dimen/network_connect_dialog_textsize"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/msg_tv"
            />
        <TextView
            android:id="@+id/msg_tv"
            android:layout_width="wrap_content"
            android:layout_height="120dp"
            android:gravity="center|left"
            android:paddingStart="5dp"
            android:textSize="@dimen/network_connect_dialog_textsize"
            android:textColor="@color/normal_text_color"
            android:text="@string/check_disconnect_reason"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/msg_title_tv"
            app:layout_constraintBottom_toTopOf="@+id/delete_btn"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dialog_line_height"
            app:layout_constraintBottom_toTopOf="@+id/delete_btn"
            android:background="@color/normal_text_color"/>
        <TextView
            android:id="@+id/delete_btn"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:text="@string/normal_sure"
            android:textSize="@dimen/network_connect_dialog_textsize"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:textColor="@color/normal_text_color"
            app:layout_constraintTop_toBottomOf="@+id/msg_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>